--- a/packages/components/Flatlist/example/Example.html
+++ b/packages/components/Flatlist/example/Example.html
@@ -46,8 +46,8 @@
 -->
 
 <script>
-import { DefaultRow, FlatList, GetDefaultDecorator } from '@mamba/flatlist/index.js';
 import * as Colors from '@mamba/styles/colors.js';
+import { DefaultRow, FlatList, GetDefaultDecorator } from '../index.js';
 import Line from './Line.html';
 
 export default {
