--- a/packages/components/Input/NumericKeyboardLegacy.html
+++ b/packages/components/Input/NumericKeyboardLegacy.html
@@ -39,17 +39,27 @@
       deleteIcon,
       confirmIcon,
     },
-    computed: {
-      _inputProps: (props = { bgColor, label, placeholder, textColor, value, validation }) => ({
-        ...props,
-      }),
-    },
     data() {
       return {
         isFocused: false,
         maxlength: 99,
         placeholder: '',
       };
+    },
+
+    computed: {
+      _inputProps: (
+        props = {
+          bgColor: undefined,
+          label: undefined,
+          placeholder: '',
+          textColor: undefined,
+          value: '',
+          validation: undefined,
+        },
+      ) => ({
+        ...props,
+      }),
     },
     methods: {
       /**
