--- a/packages/components/Dialog/Popup.html
+++ b/packages/components/Dialog/Popup.html
@@ -49,7 +49,7 @@
           if (isOpen) {
             lastShortcutsState = this.root.meta.get().shortcuts;
             this.root.meta.setShortcuts(true);
-          } else if (lastShortcutsState != undefined) {
+          } else if (lastShortcutsState !== undefined) {
             this.root.meta.setShortcuts(lastShortcutsState);
           }
         }
