--- a/packages/components/App/AdminLock.html
+++ b/packages/components/App/AdminLock.html
@@ -31,7 +31,7 @@
 
 <script>
   import Merchant from '@mamba/pos/api/merchant.js';
-  import Keyboard from '@mamba/pos/api/keyboard.js';
+  import Keyboard from '@mamba/keyboard/native/keyboard.js';
 
   export default {
     components: {
