fix: 🐛 (simulator) Q92 screen size

--- a/packages/pos/simulator/view/pos/hardware/Keypad/Q92.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/Q92.html
@@ -67,8 +67,8 @@
 <style type="text/postcss">
   .keypad {
     position: absolute;
-    bottom: 55px;
-    left: 49px;
+    bottom: 40px;
+    left: 41px;
 
     @media (max-width: 400px) {
       display: none;
@@ -77,8 +77,8 @@
 
   button {
     position: absolute;
-    width: 62px;
-    height: 30px;
+    width: 52px;
+    height: 26px;
     border: 0;
     appearance: none;
     cursor: pointer;
@@ -101,17 +101,24 @@
   }
 
   .shortcuts {
-    font-size: 10px;
+    font-size: 8px;
+  }
+
+  .help,
+  .close,
+  .back,
+  .enter {
+    font-size: 14px;
   }
 
   .close,
   .back,
   .enter {
-    left: 237px;
+    left: 204px;
   }
 
   .enter {
-    height: 69px;
+    height: 59px;
   }
 
   .key-1,
@@ -125,14 +132,14 @@
   .key-5,
   .key-8,
   .key-0 {
-    left: 88px;
+    left: 77px;
   }
 
   .key-3,
   .key-6,
   .key-9,
   .shortcuts {
-    left: 162px;
+    left: 140px;
   }
 
   .key-1,
@@ -146,19 +153,19 @@
   .key-5,
   .key-6,
   .back {
-    bottom: 80px;
+    bottom: 86px;
   }
 
   .key-7,
   .key-8,
   .key-9 {
-    bottom: 42px;
+    bottom: 53px;
   }
 
   .key-0,
   .shortcuts,
   .help,
   .enter {
-    bottom: 3px;
+    bottom: 20px;
   }
 </style>
