--- a/packages/components/Keyboard/Keyboard.html
+++ b/packages/components/Keyboard/Keyboard.html
@@ -1,10 +1,3 @@
-<table>
-  <tr>
-    <td>a</td>
-    <td>b</td>
-    <td>c</td>
-  </tr>
-</table>
 <input ref:inputElement />
 <div ref:keyboardRoot class="mb-keyboard"></div>
 
@@ -141,7 +134,7 @@
       });
 
       /**
-       * Update simple-keyboard when input is changed directly
+       * Update mamba-keyboard when input is changed directly
        */
       inputElement.addEventListener('input', (event) => {
         keyboard.setInput(event.target.value);
@@ -151,3 +144,11 @@
     },
   };
 </script>
+
+<style>
+  div {
+    border-bottom: 2px solid black;
+    margin-top: 10px;
+    padding: 10px;
+  }
+</style>
