refactor: 💡 navbar component to work with keys and click

--- a/packages/components/Flatlist/NavBar.html
+++ b/packages/components/Flatlist/NavBar.html
@@ -1,12 +1,10 @@
-<svelte:window on:keydown="onKeyPress(event)" />
-
 <div class="row">
-  <div class="keydown" on:click="onKeyPress({ keyCode: KEYDOWN })" >
+  <div class="keydown" on:click="fire('listDown')" >
     <Icon symbol="chevron-down" size="large" />
     <p>{labelDown}</p>
   </div>
 
-  <div class="keyup" on:click="onKeyPress({ keyCode: KEYUP })" >
+  <div class="keyup" on:click="fire('listUp')" >
     <Icon symbol="chevron-up" size="large" />
     <p>{labelUp}</p>
   </div>
@@ -29,23 +27,6 @@
         labelDown: 'Diminuir',
         labelUp: 'Aumentar',
       };
-    },
-    methods: {
-      onKeyPress({ keyCode }) {
-
-        switch (keyCode) {
-          case KEYDOWN:
-            this.fire('keydown');
-            break;
-
-          case KEYUP:
-            this.fire('keyup');
-            break;
-
-          default:
-            break;
-        }
-      },
     },
   };
 </script>
