--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -211,4 +211,10 @@
     padding-right: $item-horizontal-margin;
     right: 0;
   }
+
+  :global(.has-small-screen) {
+    .title {
+      font-size: 18px;
+    }
+  }
 </style>
